--- a/location_project/login/style2.css
+++ b/location_project/login/style2.css
@@ -26,6 +26,7 @@ body {
     position: relative;
     padding: 60px 40px;
     color: white;
+    overflow:visible;
 }
 .triangle {
     position: absolute;
@@ -38,6 +39,7 @@ body {
 }
 .login-box {
     margin-top: 120px;
+    position:relative;
 }
 .login-box h2 {
     margin-bottom: 30px;
